--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -15,6 +15,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-globe.gl": "^2.27.2",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
     "three": "^0.168.0"
   },
